# misis2024s-23-01-kalinkin-d-s

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.app/robobuba/: input.txt  robobuba.cpp
prj.codeforces/: 0004a.cpp  0155a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0617a.cpp  0731a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1512a.cpp  1585a.cpp  1692c.cpp  1721b.cpp  1734b.cpp  1850c.cpp  1872a.cpp  1926a.cpp  1931a.cpp  1931b.cpp  1931с.cpp  1941c.cpp  1972b.cpp  1974a.cpp  1977a.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/dynar/: CMakeLists.txt  dynar.cpp  dynar.h
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.h  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.h  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.h  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stacklst.cpp  test_stacklstt.cpp
