#-----------------------COMPLEX--------------------------
add_subdirectory(complex)

#-----------------------RATIONAL--------------------------
add_subdirectory(rational)

#-----------------------DYNARR--------------------------
add_subdirectory(dynarr)

#-----------------------STACK--------------------------
add_subdirectory(stackarr)

add_subdirectory(stacklst)

add_subdirectory(stackarrt)

add_subdirectory(stacklstt)

#-----------------------QUEUE--------------------------
add_subdirectory(queuelst)

add_subdirectory(queuelstpr)

add_subdirectory(queuearr)

add_subdirectory(queuearrt)

add_subdirectory(queuelstt)

#-----------------------BITSET--------------------------
add_subdirectory(bitset)